--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "expo-redux-template",
-  "version": "1.1.0",
+  "name": "letmecook",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
-    "expo": "^48.0.0",
+    "expo": "^48.0.21",
     "expo-camera": "~13.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
@@ -27,7 +27,9 @@
     "native-base": "^3.4.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.14",
+    "react-native-onboard": "^2.6.0",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
@@ -39,6 +41,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-onboarding-swiper": "^1.1.7",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.9.4"
   },
